[gd_scene load_steps=2 format=2]

[ext_resource path="res://JoinMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 20.0
margin_right = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 98.0
margin_bottom = 13.0
text = "Display Name: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayNameField" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = -5.0
margin_right = 256.0
margin_bottom = 19.0

[node name="Label2" type="Label" parent="."]
margin_left = 1.0
margin_top = 51.0
margin_right = 62.0
margin_bottom = 65.0
text = "Server IP:"

[node name="ServerIP" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 47.0
margin_right = 256.0
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinBtn" type="Button" parent="."]
margin_left = 2.0
margin_top = 95.0
margin_right = 82.0
margin_bottom = 115.0
text = "Join"

[node name="CancelBtn" type="Button" parent="."]
margin_left = 117.0
margin_top = 95.0
margin_right = 197.0
margin_bottom = 115.0
text = "Cancel"
[connection signal="pressed" from="JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="CancelBtn" to="." method="_on_CancelBtn_pressed"]
